--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -61,6 +61,9 @@ parts:
       - libsane-dev 
       - python3-gi 
       - valac 
+      - wget
+      - curl
+      - git
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags --abbrev=0)
